# geometry-central

./: .gitmodules  CMakeLists.txt
python/: main.cpp  main.h
python/surface/: geometry.cpp  mesh.cpp  poisson_disk_sampler.cpp
python/utilities/: main.cpp  main.h  vector.cpp
